--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button onclick="addValue('2')" class="btn number--button">2</button>
             <button onclick="addValue('3')" class="btn number--button">3</button>
             <button onclick="addOperator('-')" class="btn operator--button">-</button>
-            <button onclick="clearDisplay()" class="btn clear--action--button">c</button>
+            <button onclick="clearDisplay()" class="btn clear--action--button">C</button>
             <button onclick="addValue('0')" class="btn number--button">0</button>
             <button onclick="addOperator('+')" class="btn operator--button">+</button>
             <button onclick="result()" class="btn result--action--button">=</button>
